<resources>
    <string name="app_name">Netflix</string>
    <string name="TextView1">House of Cards</string>
    <string name="TextView2">S01:E02</string>
    <string name="Ico_Message">Message</string>
    <string name="Ico_Volume">Volume</string>
    <string name="Ico_Star">Star</string>
    <string name="Ico_Copy">Copy</string>
    <string name="Image_Title_Main">House</string>
    <string name="Timer1">01:30</string>
    <string name="Timer2">55:17</string>
    <string name="Ico_Back">Back</string>
    <string name="Ico_Play">Play</string>
    <string name="Ico_Pause">Pause</string>
</resources>
